--- a/spring-auth/src/main/resources/application.properties
+++ b/spring-auth/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/pixii_motors?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=create 
 spring.main.allow-circular-references=true
 jwt.secret="javainuse"
 jwt.get.token.uri=/authenticate
