--- a/spring-auth/pom.xml
+++ b/spring-auth/pom.xml
@@ -48,6 +48,10 @@
 
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-tomcat</artifactId>
 		</dependency>
