[spring] create config server application

--- a/microservice-application/spring-auth/src/main/resources/bootstrap.properties
+++ b/microservice-application/spring-auth/src/main/resources/bootstrap.properties
@@ -8,4 +8,10 @@ spring.main.allow-circular-references=true
 jwt.secret="javainuse"
 jwt.get.token.uri=/authenticate
 xParam=99
-server.port=8080
+# server.port=8080
+spring.application.name=spring-auth
+spring.cloud.config.enabled=true
+spring.cloud.config.uri=http://localhost:8888
+management.endpoints.web.exposure.include=*
+
+
