--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   material: ^1.0.0+2
+  flutter_secure_storage: ^6.0.0
+  http: ^0.13.5
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
