--- a/node/package.json
+++ b/node/package.json
@@ -13,18 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "eureka-js-client": "^4.5.0",
+    "express": "^4.18.2",
     "mongoose": "^6.6.7",
     "mongoose-paginate": "^5.0.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
     "@types/mongoose-paginate": "^5.0.12",
+    "@types/node": "^18.11.9",
     "concurrently": "^7.5.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
