--- a/Angular/package.json
+++ b/Angular/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
-    "@ngrx/store": "^14.3.2",
+    "@ngxs/devtools-plugin": "^3.7.5",
+    "@ngxs/storage-plugin": "^3.7.5",
+    "@ngxs/store": "^3.7.5",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
     "rxjs": "~7.5.0",
