--- a/microservice-application/spring-auth/pom.xml
+++ b/microservice-application/spring-auth/pom.xml
@@ -121,6 +121,11 @@
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 			<version>3.1.0</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-openfeign</artifactId>
+				<version>3.1.0</version>
+			</dependency>
 			 <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config	</artifactId>
