--- a/spring-auth/src/main/resources/application.properties
+++ b/spring-auth/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.mail.username=noreplaypiiximotors@gmail.com
 spring.mail.password=tbtgqqukwxgveuyo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+server.port= 8081
