--- a/microservice-application/spring-auth/src/main/resources/bootstrap.properties
+++ b/microservice-application/spring-auth/src/main/resources/bootstrap.properties
@@ -8,6 +8,14 @@ spring.main.allow-circular-references=true
 jwt.secret="javainuse"
 jwt.get.token.uri=/authenticate
 xParam=99
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=noreplaypiiximotors@gmail.com
+spring.mail.password=tbtgqqukwxgveuyo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 # server.port=8080
 spring.application.name=spring-auth
 spring.cloud.config.enabled=true
