--- a/microservice-application/spring-auth/pom.xml
+++ b/microservice-application/spring-auth/pom.xml
@@ -143,6 +143,10 @@
     <artifactId>spring-cloud-openfeign-core</artifactId>
     <version>3.0.2</version>
 </dependency> -->
+ <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 <!-- <dependencyManagement>
 		<dependencies>
