--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ Angular/node_modules/*
 Angular/dist/*
 Angular/.env
 /.metadata/
-microservice-application/service-config/cloud-conf/.git/*
+# microservice-application/service-config/cloud-conf/.git/*
