--- a/microservice-application/spring-auth/src/main/resources/bootstrap.properties
+++ b/microservice-application/spring-auth/src/main/resources/bootstrap.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=create 
+spring.jpa.hibernate.ddl-auto=update 
 spring.main.allow-circular-references=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
