--- a/microservice-application/service-config/src/main/resources/application.properties
+++ b/microservice-application/service-config/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8888
-# spring.cloud.config.server.git.uri=file://${user.dir}/cloud-conf
-spring.cloud.config.server.git.uri=file://${user.home}/cloud-conf
+spring.cloud.config.server.git.uri=file://${user.dir}/cloud-conf
+# spring.cloud.config.server.git.uri=file://${user.home}/cloud-conf
 spring.cloud.config.server.git.default-label=master
 spring.cloud.config.enabled=true
