--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   http: ^0.13.5
   provider: ^6.0.4
+  google_maps_flutter_web: ^0.4.0+3
 
 dev_dependencies:
   flutter_test:
