[flutter] create localization widget

--- a/microservice-application/spring-auth/src/main/resources/bootstrap.properties
+++ b/microservice-application/spring-auth/src/main/resources/bootstrap.properties
@@ -7,10 +7,9 @@ spring.jpa.hibernate.ddl-auto=create
 spring.main.allow-circular-references=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-# spring.mail.username=noreplaypiiximotors@gmail.com
-# spring.mail.password=tbtgqqukwxgveuyo
-spring.mail.username=dont.reply.ht@gmail.com
-spring.mail.password=xokxfbhfkbctwiba
+spring.mail.username=noreplaypiiximotors@gmail.com
+spring.mail.password=tbtgqqukwxgveuyo
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 jwt.secret="javainuse"
