[Angular] instal leaflet

--- a/Angular/package.json
+++ b/Angular/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.12",
     "@angular/platform-browser-dynamic": "^14.2.12",
     "@angular/router": "^14.2.12",
+    "@asymmetrik/ngx-leaflet": "^14.0.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@ngxs/devtools-plugin": "^3.7.5",
     "@ngxs/storage-plugin": "^3.7.5",
@@ -28,6 +29,7 @@
     "battery-indicator-element": "^1.1.6",
     "bootstrap": "^5.2.0",
     "echarts": "^5.4.0",
+    "leaflet": "^1.9.3",
     "ngx-echarts": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -39,6 +41,7 @@
     "@angular/compiler-cli": "^14.2.12",
     "@angular/localize": "^14.2.12",
     "@types/jasmine": "~4.0.0",
+    "@types/leaflet": "^1.9.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
