--- a/microservice-application/spring-auth/src/main/resources/bootstrap.properties
+++ b/microservice-application/spring-auth/src/main/resources/bootstrap.properties
@@ -13,6 +13,8 @@ spring.mail.password=xokxfbhfkbctwiba
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
 jwt.secret="javainuse"
 jwt.get.token.uri=/authenticate
 xParam=99
