--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mobile">
    <application
-        android:label="mobile"
+        android:label="Pixii Scooter App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
